--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+#map {
+  height: 100%;
+  width: 50%;
+  float: right;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Eczar', serif;
 }
