--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
-
 * {
   box-sizing: border-box;
   border-radius: 4px;
   list-style-type: none;
-  background-color: HSLA(214, 26%, 19%, 0.1);
 }
 
 html, body {
-  height: 100%;
+  position: relative;
   margin: 0.1em;
-  padding: 0;
+  padding: 0.1em;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -18,32 +17,56 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: 'Gentium Basic', serif;
+  padding: 0;
 }
 
 nav {
   display: inline-block;
-  margin: auto;
-  height: 15%;
+  margin: 0 auto;
   width: 100%;
+  text-align: center;
+  background-color: HSLA(186, 60%, 48%, 0.3);
+}
+
+form {
+  margin: 1em auto;
 }
 
 section .panel {
   display: inline-block;
   width: 100%;
   margin: 0 auto;
+  text-align: center;
+}
+
+section .panel h2 {
+  padding-right: 1.5em;
 }
 
 section img {
   width: 4em;
+  margin-top: 1em;
   margin-left: 1em;
 }
 
+#weather-box {
+  line-height: 0.5em;
+  text-align: center;
+}
+
 #weather-box h2 {
+  font-size: 3em;
   float: right;
 }
 
+#message-container {
+  text-align: left;
+  margin: 1em auto;
+}
+
 #warning-container {
-  background-color: red;
+  margin-bottom: 1em;
+  background-color: HSLA(14, 100%, 60%, 0.7);
   text-align: center;
 }
 
@@ -54,7 +77,7 @@ section img {
 
 .list {
   height: 50%;
-  display: inline;
+  display: inline-block;
   overflow: scroll;
 }
 
@@ -67,14 +90,22 @@ li {
   padding: 0.2em;
 }
 
+li:hover {
+  background-color: HSLA(186, 60%, 48%, 0.3);
+}
+
 li.active {
-  background-color: grey;
+  background-color: HSLA(201, 60%, 48%, 0.6);
 }
 
 footer {
-   position: relative;
-   width: 100%;
-   height: 2vh;
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  bottom: 0;
+  background-color: #efefef;
+  text-align: center;
 }
 
 @media (min-width: 667px) {
@@ -82,16 +113,22 @@ footer {
     font-size: 2vw;
   }
 
-  .panel {
+  section .panel {
     display: inline-block;
+    width: 50%;
     margin: 0 auto;
-    width: 48%;
+    text-align: center;
     float: left;
   }
 
-  .panel h2 {
-    font-size: 3em;
-    margin-right: 1em;
+  form {
+    margin: 3em auto;
+  }
+
+  #message-container {
+    text-align: left;
+    width: 38%;
+    float: right;
   }
 
   #map {
@@ -101,9 +138,15 @@ footer {
   }
 
   .list {
-    height: 100%;
+    height: 75%;
     width: 40%;
     float: right;
+  }
+
+  footer {
+    position: absolute;
+    height: 2em;
+    bottom: -17em;
   }
 
 }
